# demo-apps

./: .gitignore
backend-fundamentals-cs/PersonalFinanceApi/: .gitignore  PersonalFinanceApi.csproj  Program.cs  appsettings.json
backend-fundamentals-java/: .gitignore
backend-fundamentals-java/PersonalFinanceApi/: build.gradle  settings.gradle
backend-fundamentals-node/PersonalFinanceApi/: .env.example  .eslintrc.js  .gitignore  jest.config.js  package.json
backend-intermediate-cs/: OrderManagement.sln
backend-intermediate-cs/OrderManagement/: OrderManagement.csproj  Program.cs
backend-intermediate-java/OrderManagementJava/: build.gradle  settings.gradle
bicep-fundamentals/: .gitignore  main.bicep
bicep-fundamentals/modules/: keyvault.bicep  sql.bicep  storage.bicep  webapp-config.bicep  webapp.bicep
bicep-fundamentals/parameters/: main.dev.bicepparam  main.prod.bicepparam
frontend-fundamentals-react/shopHub/: package.json
frontend-intermediate-react/shopHub/: package-lock.json  tsconfig.app.json
fullstack-intermediate-react/: .gitignore
fullstack-intermediate-react/backend-project/: build.gradle
fullstack-intermediate-react/frontend-project/: .env  package-lock.json
qa-fundamentals/: .gitignore
qa-fundamentals/OrderManagementJava/: build.gradle
qa-intermediate/: .gitignore
qa-intermediate/backend-project/: build.gradle  openapi.yaml  test-data-script.sh
qa-intermediate/backend-tests/: build.gradle  gradlew
qa-intermediate/frontend-project/: package.json  vite.config.ts
qa-intermediate/frontend-tests/: .eslintrc.json  .gitignore  .prettierrc.json  cypress.config.ts  package.json  tsconfig.json
sql-fundamentals/: .gitignore
sql-intermediate/: .gitignore  README.md
sql-intermediate/tools/database-metadata/: README.md  config-mssql.yaml  config-postgres.yaml  main_mssql_metadata.py  main_oracle_metadata.py  pyproject.toml  requirements.txt
sql-intermediate/tools/database-metadata/services/: __init__.py  database_metadata_service.py  mssql_metadata_service.py  oracle_metadata_service.py  postgres_metadata_service.py
sql-intermediate/tools/database-metadata/templates/: SCHEMA_TEMPLATE.md
sql-intermediate/tools/sql-tools/: README.md  pyproject.toml
sql-intermediate/tools/sql-tools/database_inserts/: config-postgres.yaml  main.py
sql-intermediate/tools/sql-tools/database_inserts/vendors/: mssql.py  oracle.py  postgres.py
(+167 files in other folders)
